@@ -1,6 +1,8 @@
 package kubernetes
 
 import (
+	"strings"
+
 	"github.com/elastic/beats/libbeat/common"
 	"github.com/elastic/beats/libbeat/common/safemapstr"
 )
@@ -15,39 +17,41 @@ type MetaGenerator interface {
 }
 
 type metaGenerator struct {
-	annotations   []string
-	labels        []string
-	labelsExclude []string
-	poduid        bool
+	IncludeLabels          []string `config:"include_labels"`
+	ExcludeLabels          []string `config:"exclude_labels"`
+	IncludeAnnotations     []string `config:"include_annotations"`
+	IncludePodUID          bool     `config:"include_pod_uid"`
+	IncludeCreatorMetadata bool     `config:"include_creator_metadata"`
 }
 
 // NewMetaGenerator initializes and returns a new kubernetes metadata generator
-func NewMetaGenerator(annotations, labels, labelsExclude []string, includePodUID bool) MetaGenerator {
-	return &metaGenerator{
-		annotations:   annotations,
-		labels:        labels,
-		labelsExclude: labelsExclude,
-		poduid:        includePodUID,
+func NewMetaGenerator(cfg *common.Config) (MetaGenerator, error) {
+	// default settings:
+	generator := metaGenerator{
+		IncludeCreatorMetadata: true,
 	}
+
+	err := cfg.Unpack(&generator)
+	return &generator, err
 }
 
 // PodMetadata generates metadata for the given pod taking to account certain filters
 func (g *metaGenerator) PodMetadata(pod *Pod) common.MapStr {
 	labelMap := common.MapStr{}
-	if len(g.labels) == 0 {
+	if len(g.IncludeLabels) == 0 {
 		for k, v := range pod.Metadata.Labels {
 			safemapstr.Put(labelMap, k, v)
 		}
 	} else {
-		labelMap = generateMapSubset(pod.Metadata.Labels, g.labels)
+		labelMap = generateMapSubset(pod.Metadata.Labels, g.IncludeLabels)
 	}
 
 	// Exclude any labels that are present in the exclude_labels config
-	for _, label := range g.labelsExclude {
+	for _, label := range g.ExcludeLabels {
 		delete(labelMap, label)
 	}
 
-	annotationsMap := generateMapSubset(pod.Metadata.Annotations, g.annotations)
+	annotationsMap := generateMapSubset(pod.Metadata.Annotations, g.IncludeAnnotations)
 	meta := common.MapStr{
 		"pod": common.MapStr{
 			"name": pod.Metadata.Name,
@@ -59,8 +63,23 @@ func (g *metaGenerator) PodMetadata(pod *Pod) common.MapStr {
 	}
 
 	// Add Pod UID metadata if enabled
-	if g.poduid {
+	if g.IncludePodUID {
 		safemapstr.Put(meta, "pod.uid", pod.Metadata.UID)
+	}
+
+	// Add controller metadata if present
+	if g.IncludeCreatorMetadata {
+		for _, ref := range pod.Metadata.OwnerReferences {
+			if ref.Controller {
+				switch ref.Kind {
+				// TODO grow this list as we keep adding more `state_*` metricsets
+				case "Deployment",
+					"ReplicaSet",
+					"StatefulSet":
+					safemapstr.Put(meta, strings.ToLower(ref.Kind)+".name", ref.Name)
+				}
+			}
+		}
 	}
 
 	if len(labelMap) != 0 {
